--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
                 "foregroundImage": "./assets/images/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
             },
-            "package": "com.skripsifta.mobile"
+            "package": "com.skripsifta.mobile",
+            "softwareKeyboardLayoutMode": "pan"
         },
         "web": {
             "bundler": "metro",
