--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.10",
     "react-query": "^3.39.3",
     "zod": "^3.23.8"
